---
title: edu.nust.engine.core.components
config:
  look: classic
  layout: dagre
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
class SpriteRenderer
class CircleRenderer
class Transform
class BoxRenderer
class ShapeRenderer
ShapeRenderer <|-- BoxRenderer : extends
ShapeRenderer <|-- CircleRenderer : extends